--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "capture:screens": "bash scripts/capture-screenshots.sh"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
